--- a/portfolio.html
+++ b/portfolio.html
@@ -8,12 +8,12 @@
     <style type="text/css">
     
     .container {
-        margin-top: 30px;
-        padding: 15px;
+        margin-top: 10px;
+        padding: 10px;
         width: 800px;
     }
     .card {
-        height: 200px;
+        height: 250px;
         margin: 10px;
         background-color: aqua;
     }
@@ -26,9 +26,26 @@
         text-align: center;
         height:50px;
     }
+    @media only screen and (min-width: 480px) {
+     /* For mobile phones: */
+     .col-s-12 {width: 100%;}
+    }
+    @media only screen and (min-width: 600px) {
+    /* For tablets: */
+    .col-s-6 {width: 50%;}
+    .col-s-9 {width: 75%;}
+    .col-s-12 {width: 100%;}
+    }
+    @media only screen and (min-width: 768px) {
+    /* For desktop: */
+    .col-3 {width: 25%;}
+    .col-6 {width: 50%;}
+    .col-9 {width: 75%;}
+    .col-12 {width: 100%;}
+    }  
     </style>
 </head>
-<body background="marblebackground.jpg">
+<body background="./Assets/Images/marblebackground.jpg">
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkmagenta;">
         <a class="navbar-brand" href="index.html" style="color:dimgray" >About Me</a>
         <a class="navbar-brand" href="contact.html" style="color:dimgray" >Contact</a>
@@ -36,36 +53,44 @@
       </nav>
     <div class="container">
         <div class="row">
-            <div class="col-sm-6">
+            <div class="col-lg-6">
               <div class="card">
-                  <h5 class="card-title" style="text-align: center;">Image 1</h5>
+                <a style="text-align:center;" href=https://jadep27.github.io/Planthis>Plan This</a>
+                <img src="./Assets/Images/planthis.png" style="width:225px;height:150px; margin:auto;">
+                <a style="text-align:center;" href=https://github.com/JadeP27/Planthis>Github repository link</a>
               </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-lg-6">
               <div class="card">
-                  <h5 class="card-title" style="text-align:center;">Image 2</h5>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-sm-6">
-              <div class="card">
-                  <h5 class="card-title" style="text-align:center;">Image 3</h5>
-              </div>
-            </div>
-            <div class="col-sm-6">
-              <div class="card">
-                  <h5 class="card-title" style="text-align:center;">Image 4</h5>
+                  <a style="text-align:center;" href=https://jonnahmarie.github.io/Project-1-Basix/results.html>Basix</a>
+                  <img src=./Assets/Images/basix.png style="width:225px;height:150px; margin:auto;">
+                  <a style="text-align:center;" href=https://github.com/jonnahmarie/Project-1-Basix>Github repository link</a>
               </div>
             </div>
           </div>
           <div class="row">
-            <div class="col-sm-6">
+            <div class="col-lg-6">
+              <div class="card">
+                <a style="text-align:center;" href=https://vtaymany.github.io/uwu>UWU</a>
+                <img src=./Assets/Images/uwu.png style="width:225px;height:150px; margin:auto;">
+                <a style="text-align:center;" href=https://github.com/vtaymany/uwu>Github repository link</a>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="card">
+                <a style="text-align:center;" href=https://jadep27.github.io/API-Popquiz>API Popquiz</a>
+                <img src=./Assets/Images/api-popquiz.png style="width:225px;height:150px; margin:auto;">
+                <a style="text-align:center;" href=https://github.com/JadeP27/API-Popquiz>Github repository link</a>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-6">
               <div class="card">
                   <h5 class="card-title" style="text-align:center;">Image 5</h5>
               </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-lg-6">
               <div class="card">
                   <h5 class="card-title" style="text-align:center;">Image 6</h5>
               </div>
