--- a/contact.html
+++ b/contact.html
@@ -22,9 +22,26 @@
         text-align: center;
         height:50px;
     }
+    @media only screen and (min-width: 480px) {
+    /* For mobile phones: */
+    .col-s-12 {width: 100%;}
+    }
+    @media only screen and (min-width: 600px) {
+    /* For tablets: */
+    .col-s-6 {width: 50%;}
+    .col-s-9 {width: 75%;}
+    .col-s-12 {width: 100%;}
+    }
+    @media only screen and (min-width: 768px) {
+    /* For desktop: */
+    .col-3 {width: 25%;}
+    .col-6 {width: 50%;}
+    .col-9 {width: 75%;}
+    .col-12 {width: 100%;}
+    }
     </style>
 </head>
-<body background="marblebackground.jpg">
+<body background="./Assets/Images/marblebackground.jpg">
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkmagenta;">
       <a class="navbar-brand" href="index.html" style="color:dimgray">About Me</a>
       <a class="navbar-brand" href="contact.html" style="color:floralwhite">Contact</a>
@@ -60,6 +77,6 @@
       </form>
 </body>
 <footer class="footer">
-  <p> Thank you for visiting </p>
+  <p>contact information: Jade Porter :: jnporter.jp@gmail.com :: 757-506-9298</p>
 </footer>
 </html>
