--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>About Me</title>
     <style>
         .card {
-            margin: 100px 325px 100px 325px;
+            margin: auto;
             padding: 15px;
         }
         .responsive {
@@ -26,10 +26,27 @@
         color:floralwhite;
         text-align: center;
         height:50px;
-    }
+        }
+        @media only screen and (min-width: 480px) {
+        /* For mobile phones: */
+         .col-s-12 {width: 100%;}
+        }
+        @media only screen and (min-width: 600px) {
+        /* For tablets: */
+        .col-s-6 {width: 50%;}
+        .col-s-9 {width: 75%;}
+        .col-s-12 {width: 100%;}
+        }
+        @media only screen and (min-width: 768px) {
+        /* For desktop: */
+       .col-3 {width: 25%;}
+       .col-6 {width: 50%;}
+       .col-9 {width: 75%;}
+       .col-12 {width: 100%;}
+        }
     </style>
 </head>
-<body background="marblebackground.jpg">
+<body background="./Assets/Images/marblebackground.jpg">
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkmagenta;"> 
         <a class="navbar-brand" href="index.html" style="color:floralwhite">About Me</a>
         <a class="navbar-brand" href="contact.html" style="color:dimgray">Contact</a>
@@ -39,24 +56,25 @@
     <div class="card mb-3" style="max-width: 600px; background-color: aqua;";>
         <div class="row no-gutters">
           <div class="col-md-4">
-            <img src= "JP.jpg" class="responsive">
+            <img src= "./Assets/Images/JP.jpg" class="responsive">
           </div>
           <div class="col-md-8">
             <div class="card-body">
               <h2 class="card-title" style="color: darkmagenta; text-align:center; font-family: fantasy;">About Me</h2>
-              <p class="card-text">I relocated to Los Angeles 7 years ago from Virginia. I attended Virginia State University and majored in Criminal Justice.  
+              <p class="card-text">My name is Jade Porter.  I attended Virginia State University and majored in Criminal Justice.  I relocated to Los Angeles 7 years ago from Virginia. 
                 I currently work at SingerLewak LLP as a Professional Development & Training Coordinator.  I am changing my career trajectory and am now on the
-                path to becoming a team-member in the Programming field.  I am looking forward to this new journey and welcoming all of the many challenges along
-                the way. My social media links are below.</p>
+                path to becoming a team-member in the Programming field.  I am enrolled in the Full-Stack development bootcamp at UCLA-extension.  I am looking forward to this new journey 
+                and welcoming all of the many challenges along the way. My social media links are below.</p>
               <p class="card-text"><small class="text-muted;"><a href= https://www.instagram.com/jadedlife/?hl=en>Instagram: @jadedlife</small></p>
               <p class="card-text"><small class="text-muted;"><a href=https://www.facebook.com/jade.porter.7503>Facebook: Jade Porter</small></p>
               <p class="card-text"><small class="text-muted;"><a href=https://www.linkedin.com/in/jade-porter-67109517a>LinkedIN: Jade Porter</small></p>
+              <p class="card-text"><small class="text-muted;"><a href=https://github.com/JadeP27>Github: JadeP27</small></p>
             </div>
           </div>
         </div>
       </div>
 </body>
 <footer class="footer">
-    <p> Thank you for visiting </p>
+    <a style="text-align:center;" href=https://drive.google.com/file/d/1UZ4OpFsKjlWlKvFsFi55IkdcwDy7J9tJ/view?usp=sharing>Click here to access my resume</a>
 </footer>
 </html>
